implement basic game mechanics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,7 @@ cmake_minimum_required(VERSION 3.10)
 # Replace "game" with a name for your project (this is used the name of the output)
 project(game)
 
-# Add your sources here (adding headers is optional, but helps some CMake generators)
-set(PROJECT_SOURCE game.cpp game.hpp)
+file(GLOB PROJECT_SOURCE src/*)
 
 # ... and any other files you want in the release here
 set(PROJECT_DISTRIBS LICENSE README.md)
