--- a/metadata.yml
+++ b/metadata.yml
@@ -1,10 +1,10 @@
-title: game title
-description: game description
-author: you
+title: chili-tetris
+description: A fun and challenging tetris game with a chili twist!
+author: TeriyakiGod
 splash:
   file: assets/no-image.png
 icon:
   file: assets/no-icon.png
-version: v0.0.1
-category: game # game, demo, utility, ...
-url: https://github.com/32blit/32blit-boilerplate
+version: v0.1.0
+category: game
+url: https://github.com/chili-chip/chili-tetris
